[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/player/NewFPS.gd" type="Script" id=1]
[ext_resource path="res://Scripts/player/abilities/pointer.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Misc/fps counter.tscn" type="PackedScene" id=3]
[ext_resource path="res://Materials/player/UI/Crosshair.png" type="Texture" id=4]
[ext_resource path="res://Fonts/big-space-font/Title Screen.tres" type="DynamicFont" id=5]
[ext_resource path="res://Materials/kenney_prototypetextures/PNG/Dark/texture_12.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Player/hands/floater selector.tscn" type="PackedScene" id=8]

[sub_resource type="CylinderShape" id=1]
radius = 1.5
height = 6.0

[node name="NewFPS" type="KinematicBody" groups=[
"Player",
]]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0 )
collision_layer = 2
script = ExtResource( 1 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.90805, 0 )

[node name="Camera" type="Camera" parent="Head"]
far = 300.0

[node name="pointer" type="RayCast" parent="Head/Camera"]
transform = Transform( 0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, -30 )
collision_mask = 1048575
script = ExtResource( 2 )

[node name="Control" type="Control" parent="Head/Camera"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Head/Camera/Control"]
margin_left = 940.0
margin_top = 520.0
margin_right = 980.0
margin_bottom = 560.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pauseMenu" type="TextureRect" parent="Head/Camera/Control"]
visible = false
margin_left = 448.0
margin_top = 28.0
margin_right = 1472.0
margin_bottom = 1052.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Button" parent="Head/Camera/Control/pauseMenu"]
margin_left = 577.955
margin_top = 846.716
margin_right = 930.955
margin_bottom = 900.716
custom_fonts/font = ExtResource( 5 )
text = "Get back in the gaym"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Button" parent="Head/Camera/Control/pauseMenu"]
margin_left = 42.8116
margin_top = 844.337
margin_right = 474.812
margin_bottom = 898.337
custom_fonts/font = ExtResource( 5 )
text = "Go back to the main menu"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Head/Camera/Control"]
margin_right = 491.0
margin_bottom = 138.0
custom_fonts/mono_font = ExtResource( 5 )
custom_fonts/bold_italics_font = ExtResource( 5 )
custom_fonts/italics_font = ExtResource( 5 )
custom_fonts/bold_font = ExtResource( 5 )
custom_fonts/normal_font = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fps counter" parent="Head/Camera" instance=ExtResource( 3 )]
position = Vector2( 1744.91, 42 )

[node name="handLoc" type="Spatial" parent="Head"]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 1.363, -0.991, -1.819 )

[node name="hand" type="Spatial" parent="Head"]
transform = Transform( 0.4, 0, 0, 0, 0.4, 0, 0, 0, 0.4, 1.363, -0.991, -1.819 )

[node name="floater selector" parent="Head/hand" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.315331, -0.251326 )

[node name="GroundCheck" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.86862, 0 )
enabled = true
cast_to = Vector3( 0, -1.5, 0 )

[node name="CollisionShape2" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, -1.1921e-07, 0, 1.1921e-07, 1, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true
[connection signal="button_up" from="Head/Camera/Control/pauseMenu/Pause" to="." method="_on_Pause_button_up"]
[connection signal="button_up" from="Head/Camera/Control/pauseMenu/MainMenu" to="." method="_on_MainMenu_button_up"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
